--- a/index.html
+++ b/index.html
@@ -12,35 +12,77 @@
     </header>
 
     <main>
-        <aside>
-            <ul>
+        <aside id="MATEMATICA">
+            <h2>MATEMATICA</h2>
+            <ol>
                 <li>
                     <input type="checkbox" id="item1">
-                    <label for="item1">1</label>
+                    <label for="item1">Porcentagem</label>
                 </li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">1</label></li>
+                    <label for="item1">Razão e Proporção</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">1</label></li>
+                    <label for="item1">Regra de Três (Simples e Composta)</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">1</label></li>
+                    <label for="item1">Funções (principalmente a função afim e a função quadrática)</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">1</label></li>
+                    <label for="item1">Gráficos e Tabelas (interpretação de dados)</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">1</label></li>
+                    <label for="item1">Geometria Plana</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">1</label></li>
+                    <label for="item1">Geometria Espacial</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">1</label></li>
+                    <label for="item1">Geometria Analítica</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">1</label></li>
+                    <label for="item1">Estatística e Probabilidade</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">1</label></li>
+                    <label for="item1">Grandezas e Unidades de Medida</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">1</label></li>
+                    <label for="item1">Progressões Aritméticas e Geométricas (PA e PG)</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Sistema de Equações</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Equações e Inequações do 1º e 2º grau</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Análise Combinatória (mais básico)</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Matemática Financeira</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Logaritmos (às vezes aparece, mas em nível introdutório)</label></li>
 
               
-            </ul>
+            </ol>
+        </aside>
+
+        <aside id="PORTUQUES">
+            <h2>PORTUQUES</h2>
+            <ol>
+                <li>
+                    <input type="checkbox" id="item1">
+                    <label for="item1">Interpretação de Texto</label>
+                </li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Funções da Linguagem</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Figuras de Linguagem</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Tipos e Gêneros Textuais</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Coesão e Coerência Textual</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Variação Linguística</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Intertextualidade e Interdiscursividade</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Gramática Aplicada ao Texto</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Linguagem Verbal e Não Verbal</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Literatura (aparece pouco, mas pode cair)</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Linguagem Publicitária e Manipulação da Informação</label></li>
+            
+            </ol>
         </aside>
     </main>
 
