--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
             <ol>
                 <li>
                     <input type="checkbox" id="item1">
-                    <label for="item1">Porcentagem</label>
+                    <label for="item1">Porcentagem 💵</label>
                 </li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Razão e Proporção</label></li>
+                    <label for="item1">Razão e Proporção 💰</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Regra de Três (Simples e Composta)</label></li>
+                    <label for="item1">Regra de Três (Simples e Composta) 📏</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Funções (principalmente a função afim e a função quadrática)</label></li>
+                    <label for="item1">Funções (principalmente a função afim e a função quadrática) 📊</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Gráficos e Tabelas (interpretação de dados)</label></li>
+                    <label for="item1">Gráficos e Tabelas (interpretação de dados) 📈</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Geometria Plana</label></li>
+                    <label for="item1">Geometria Plana 🧮</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Geometria Espacial</label></li>
+                    <label for="item1">Geometria Espacial 🧊</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Geometria Analítica</label></li>
+                    <label for="item1">Geometria Analítica 📏</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Estatística e Probabilidade</label></li>
+                    <label for="item1">Estatística e Probabilidade 📈</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Grandezas e Unidades de Medida</label></li>
+                    <label for="item1">Grandezas e Unidades de Medida 📏</label></li>
                 <li><input type="checkbox" id="item1">
                     <label for="item1">Progressões Aritméticas e Geométricas (PA e PG)</label></li>
                 <li><input type="checkbox" id="item1">
@@ -81,6 +81,30 @@
                     <label for="item1">Literatura (aparece pouco, mas pode cair)</label></li>
                 <li><input type="checkbox" id="item1">
                     <label for="item1">Linguagem Publicitária e Manipulação da Informação</label></li>
+            
+            </ol>
+        </aside>
+        <aside id="BIOLOGIA">
+            <h2>PORTUQUES</h2>
+            <ol>
+                <li>
+                    <input type="checkbox" id="item1">
+                    <label for="item1">Ecologia 🌱</label>
+                </li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Citologia (Estudo da Célula) 🔬</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Genética 🧬</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Fisiologia Humana 🫀</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Evolução 🧫</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Parasitologia e Saúde Pública 🦟</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Biotecnologia e Bioética 🧪</label></li>
+                <li><input type="checkbox" id="item1">
+                    <label for="item1">Reinos Biológicos e Classificação 🌿</label></li>
             
             </ol>
         </aside>
