--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
                 <li><input type="checkbox" id="item1">
                     <label for="item1">Grandezas e Unidades de Medida 📏</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Progressões Aritméticas e Geométricas (PA e PG)</label></li>
+                    <label for="item1">Progressões Aritméticas e Geométricas (PA e PG) 📐 </label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Sistema de Equações</label></li>
+                    <label for="item1">Sistema de Equações 🧮</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Equações e Inequações do 1º e 2º grau</label></li>
+                    <label for="item1">Equações e Inequações do 1º e 2º grau 🧠</label></li>
                 <li><input type="checkbox" id="item1">
                     <label for="item1">Análise Combinatória (mais básico)</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Matemática Financeira</label></li>
+                    <label for="item1">Matemática Financeira 🎲 </label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Logaritmos (às vezes aparece, mas em nível introdutório)</label></li>
+                    <label for="item1">Logaritmos (às vezes aparece, mas em nível introdutório) 🔢</label></li>
 
               
             </ol>
@@ -59,33 +59,33 @@
             <ol>
                 <li>
                     <input type="checkbox" id="item1">
-                    <label for="item1">Interpretação de Texto</label>
+                    <label for="item1">Interpretação de Texto 🧠</label>
                 </li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Funções da Linguagem</label></li>
+                    <label for="item1">Funções da Linguagem 🎭</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Figuras de Linguagem</label></li>
+                    <label for="item1">Figuras de Linguagem 🎯</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Tipos e Gêneros Textuais</label></li>
+                    <label for="item1">Tipos e Gêneros Textuais 🌍</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Coesão e Coerência Textual</label></li>
+                    <label for="item1">Coesão e Coerência Textual 🔗</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Variação Linguística</label></li>
+                    <label for="item1">Variação Linguística 🗣️</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Intertextualidade e Interdiscursividade</label></li>
+                    <label for="item1">Intertextualidade e Interdiscursividade 📢</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Gramática Aplicada ao Texto</label></li>
+                    <label for="item1">Gramática Aplicada ao Texto 📝</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Linguagem Verbal e Não Verbal</label></li>
+                    <label for="item1">Linguagem Verbal e Não Verbal 🗣️</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Literatura (aparece pouco, mas pode cair)</label></li>
+                    <label for="item1">Literatura (aparece pouco, mas pode cair) 📖</label></li>
                 <li><input type="checkbox" id="item1">
-                    <label for="item1">Linguagem Publicitária e Manipulação da Informação</label></li>
+                    <label for="item1">Linguagem Publicitária e Manipulação da Informação 🧠</label></li>
             
             </ol>
         </aside>
         <aside id="BIOLOGIA">
-            <h2>PORTUQUES</h2>
+            <h2>BIOLOGIA</h2>
             <ol>
                 <li>
                     <input type="checkbox" id="item1">
@@ -111,7 +111,10 @@
     </main>
 
     <footer>
-
+        <nav class="links">
+            <a href="#">1</a>
+            <a href="#">2</a>
+        </nav>
     </footer>
 </body>
 </html>
